k8s/overlays/dev/front-mymovies2-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-mymovies2
spec:
  template:
    spec:
      containers:
        - name: front-mymovies2
          image: your-repo/front-mymovies2-image
