k8s/overlays/dev/imagepullsecrets-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-my-movies-app
  namespace: app
spec:
  template:
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
